--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,59 +12,58 @@
         android:id="@+id/grid"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:numColumns="auto_fit"
-        tools:layout_editor_absoluteY="56dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <CheckBox
-        android:id="@+id/scoreToggle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="SCORE"
-        app:layout_constraintBottom_toTopOf="@+id/grid"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <CheckBox
-        android:id="@+id/hiddenToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="HIDDEN"
-        app:layout_constraintBottom_toTopOf="@+id/grid"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.31"
-        app:layout_constraintStart_toEndOf="@+id/generalToggle"
-        app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/scoreToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="SCORE"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="12dp" />
 
-    <CheckBox
-        android:id="@+id/generalToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="GENERAL"
-        app:layout_constraintBottom_toTopOf="@+id/grid"
-        app:layout_constraintStart_toEndOf="@+id/pcToggle"
-        app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/pcToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="PC"
+            tools:layout_editor_absoluteX="96dp"
+            tools:layout_editor_absoluteY="12dp" />
 
-    <CheckBox
-        android:id="@+id/pcToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:text="PC"
-        app:layout_constraintBottom_toTopOf="@+id/grid"
-        app:layout_constraintStart_toEndOf="@+id/scoreToggle"
-        app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/generalToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="GENERAL"
+            tools:layout_editor_absoluteX="162dp"
+            tools:layout_editor_absoluteY="12dp" />
+
+        <CheckBox
+            android:id="@+id/hiddenToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="HIDDEN"
+            tools:layout_editor_absoluteX="272dp"
+            tools:layout_editor_absoluteY="12dp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
