--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="@android:color/holo_red_dark"
             android:checked="true"
             android:text="SCORE"
             tools:layout_editor_absoluteX="8dp"
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="@android:color/holo_blue_dark"
             android:checked="true"
             android:text="PC"
             tools:layout_editor_absoluteX="96dp"
@@ -50,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="@android:color/holo_green_light"
             android:checked="true"
             android:text="GENERAL"
             tools:layout_editor_absoluteX="162dp"
@@ -60,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="@android:color/darker_gray"
             android:checked="true"
             android:text="HIDDEN"
             tools:layout_editor_absoluteX="272dp"
